tests/visibility/fail_private.stderr
error[E0689]: can't call method `double` on ambiguous numeric type `{integer}`
  --> tests/visibility/fail_private.rs:13:15
   |
13 |     let _ = 3.double();
   |               ^^^^^^
   |
help: you must specify a concrete type for this numeric value, like `i32`
   |
13 |     let _ = 3_i32.double();
   |              ++++
